--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -279,7 +279,7 @@
     <string name="about_translators_title">Traductores</string>
     <string name="about_contributors_funding_title">Fuente de financiamiento</string>
     <string name="about_rate">Califica esta app</string>
-    <string name="about_technical_title">Detalles Tecnicos 1</string>
+    <string name="about_technical_title">Detalles Tecnicos</string>
     <string name="about_licenses_title">Licencias</string>
     <string name="changelog_title">Registro de Cambios</string>
     <string name="libraries_title">Bibliotecas</string>
