--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -279,7 +279,7 @@
     <string name="about_translators_title">Traduttori</string>
     <string name="about_contributors_funding_title">Finanziamenti</string>
     <string name="about_rate">Valuta questa app</string>
-    <string name="about_technical_title">Dettagli Tecnici 1</string>
+    <string name="about_technical_title">Dettagli Tecnici</string>
     <string name="about_licenses_title">Licenze</string>
     <string name="changelog_title">Diario di modifiche</string>
     <string name="libraries_title">Biblioteche</string>
