--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -396,6 +396,12 @@
     <string name="brapi_ontology_error">Error al cargar variables desde BrAPI.</string>
     <string name="brapi_save_field_error">Error al guardar el Campo</string>
     <string name="brapi_field_not_selected">El Campo seleccionado debe importarse desde BrAPI.</string>
+    <string name="brapi_fields_filter_by_program">Filtrar por programa</string>
+    <string name="brapi_fields_filter_by_trial">Filtrar por trial</string>
+    <string name="brapi_programs_load">Cargar programas</string>
+    <string name="brapi_programs_select">Seleccionar programa</string>
+    <string name="brapi_trials_load">Cargar trials</string>
+    <string name="brapi_trials_select">Seleccionar trial</string>
     <string name="brapi_save_trait">Guardar variables</string>
     <string name="brapi_must_configure_url">Debe configurar una URL de BrAPI válida en Ajustes antes de continuar</string>
     <string name="brapi_export_failed">Exportación por BrAPI fallida</string>
