--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -501,4 +501,9 @@
     </string>
     <string name="brapi_info_title">BrAPI Syncing Info</string>
     <string name="brapi_auth_btn">Log In to Site</string>
+    <string name="trait_labelprint_preview_description">Label preview.</string>
+    <string name="trait_labelprint_zebraconnect_button_description">Button which navigates to Zebra Connect app.</string>
+    <string name="trait_labelprint_print_button_description">Button which prints labels configured in this dialog.</string>
+    <string name="trait_printlabel_after_print_message">Label printed!</string>
+    <string name="trait_printlabel_after_print_error">Unable to print label. Make sure the PrintConnect app is installed and connected to your Zebra printer.</string>
 </resources>
