--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -501,4 +501,5 @@
     </string>
     <string name="brapi_info_title">BrAPI Syncing Info</string>
     <string name="brapi_auth_btn">Log In to Site</string>
+    <string name="brapi_pagination">BrAPI Pagination</string>
 </resources>
