Profile moved completely to Settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -330,7 +330,7 @@
     <!-- Profile dialog -->
     <string name="profile_person">Person</string>
     <string name="profile_location">Location</string>
-    <string name="profile_reset">Clear</string>
+    <string name="profile_reset">Reset Profile</string>
 
     <string name="profile_person_title">Set person</string>
     <string name="profile_name_first">First name</string>
