--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -176,10 +176,6 @@
     <string name="preferences_general_skip_entries_with_data_description">Omite entradas que tienen datos para la variable actual</string>
     <string name="preferences_general_share_disable">Deshabilitar compartir archivos</string>
     <string name="preferences_general_share_disable_description">Cuando se exportan archivos, no se mostrará el diálogo de compartir</string>
-    <string name="preferences_general_entry_left_disable">Desactivar flecha de entrada izquierda</string>
-    <string name="preferences_general_entry_left_disable_description">Si no se han capturado datos, la flecha de entrada izquierda está deshabilitada</string>
-    <string name="preferences_general_entry_right_disable">Desactivar flecha de entrada derecha</string>
-    <string name="preferences_general_entry_right_disable_description">Si no se han capturado datos, la flecha de entrada derecha está deshabilitada</string>
     <string name="preferences_general_barcode_camera">Pasar a la entrada vía código de barras</string>
     <string name="preferences_general_barcode_camera_description">Escanear el código de barras y pasar a la entrada específica</string>
     <string name="preferences_general_feature_next_missing">Siguiente entrada sin datos</string>
@@ -370,11 +366,11 @@
     <string name="citation_title">Cita</string>
     <string name="citation_string">Si utiliza Field Book para la investigación, cite la siguiente publicación:</string>
     <!-- Brapi strings -->
-    <string name="brapi_base_url">URL base de BrAPI</string>
+    <string name="brapi_base_url">URL base</string>
     <string name="brapi_base_url_desc">La URL base para el servidor conectado por BrAPI</string>
     <string name="brapi_save_authorize">Salvar y Autorizar</string>
     <string name="brapi_authorize">Autorizar BrAPI</string>
-    <string name="brapi_reauthorize">Reautorizar BrAPI</string>
+    <string name="brapi_reauthorize">Reautorizar</string>
     <string name="brapi_revoke_auth">Cerrar sesión</string>
     <string name="brapi_auth_success">Autorización por BrAPI exitosa</string>
     <string name="brapi_auth_deny">Autorización BrAPI denegada</string>
