--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -176,10 +176,6 @@
     <string name="preferences_general_skip_entries_with_data_description">Salta le voci che hanno gia\' un dato per questo carattere</string>
     <string name="preferences_general_share_disable">Disabilita condivisione file</string>
     <string name="preferences_general_share_disable_description">Quando i file vengono esportati, la finestra di dialogo non viene mostrata</string>
-    <string name="preferences_general_entry_left_disable">Disabilita la freccia di voce a sinistra</string>
-    <string name="preferences_general_entry_left_disable_description">Se non sono stati raccolti dati, la freccia di voce a sinistra è disabilitata</string>
-    <string name="preferences_general_entry_right_disable">Disabilita la freccia di voce a destra</string>
-    <string name="preferences_general_entry_right_disable_description">Se non sono stati raccolti dati, la freccia di voce a destra è disabilitata</string>
     <string name="preferences_general_barcode_camera">Passa alla voce tramite codice a barre</string>
     <string name="preferences_general_barcode_camera_description">Scansiona il codice a barre e passa alla voce specifica</string>
     <string name="preferences_general_feature_next_missing">Prossima voce senza dati</string>
@@ -370,11 +366,11 @@
     <string name="citation_title">Citazione</string>
     <string name="citation_string">Se si utilizza Field Book per la ricerca, si prega di citare il seguente articolo di giornale:</string>
     <!-- Brapi strings -->
-    <string name="brapi_base_url">URL di base BrAPI</string>
+    <string name="brapi_base_url">URL di base</string>
     <string name="brapi_base_url_desc">L\'URL di base per il server BrAPI collegato</string>
     <string name="brapi_save_authorize">Salva e autorizza</string>
     <string name="brapi_authorize">Autorizza BrAPI</string>
-    <string name="brapi_reauthorize">Autorizza nuovamente BrAPI</string>
+    <string name="brapi_reauthorize">Autorizza nuovamente</string>
     <string name="brapi_revoke_auth">Disconnettersi</string>
     <string name="brapi_auth_success">Autorizzazione BrAPI riuscita</string>
     <string name="brapi_auth_deny">Autorizzazione BrAPI negata</string>
