--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -176,10 +176,6 @@
     <string name="preferences_general_skip_entries_with_data_description">調査中形質のデータ入力済エントリーをスキップ</string>
     <string name="preferences_general_share_disable">ファイル共有の非許可</string>
     <string name="preferences_general_share_disable_description">ファイルをエクスポートした時に共有ダイアログを非表示</string>
-    <string name="preferences_general_entry_left_disable">左エントリー矢印を非表示</string>
-    <string name="preferences_general_entry_left_disable_description">データの未収集時に左エントリー矢印を非表示</string>
-    <string name="preferences_general_entry_right_disable">右エントリー矢印を非表示</string>
-    <string name="preferences_general_entry_right_disable_description">データの未収集時に右エントリー矢印を非表示</string>
     <string name="preferences_general_barcode_camera">バーコード入力設定</string>
     <string name="preferences_general_barcode_camera_description">バーコードを読み取り、特定のエントリーに移動</string>
     <string name="preferences_general_feature_next_missing">次のデータ未収集エントリーへ移動</string>
@@ -370,11 +366,11 @@
     <string name="citation_title">引用</string>
     <string name="citation_string">Field Bookを研究に使用されている方は次の論文を引用してください：</string>
     <!-- Brapi strings -->
-    <string name="brapi_base_url">BrAPIの基本URL</string>
+    <string name="brapi_base_url">の基本URL</string>
     <string name="brapi_base_url_desc">BrAPIサーバー接続のための基本URL</string>
     <string name="brapi_save_authorize">保存と認証</string>
     <string name="brapi_authorize">BrAPI認証</string>
-    <string name="brapi_reauthorize">BrAPI再認証</string>
+    <string name="brapi_reauthorize">再認証</string>
     <string name="brapi_revoke_auth">ログアウト</string>
     <string name="brapi_auth_success">BrAPI認証成功</string>
     <string name="brapi_auth_deny">BrAPI認証拒否</string>
