closes issue#172 added new brapi v2 import fragment BrapiLoadDialog change (small change to allow multiple studies to be imported) Updated BrapiActivity to work with BrapiLoadDialog change. added kotlin coroutine dependency updated FieldEditorActivity to call new import when V2 is selected in settings. Added generic page view controller implementation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -516,6 +516,7 @@
     <string name="brapi_error_saving_some_traits">Error saving some traits. Some traits were not saved</string>
     <string name="brapi_traits_saved_success">Selected traits saved successfully.</string>
     <string name="device_offline_warning">Device Offline: Please connect to a network and try again</string>
+    <string name="no_studies_selected_warning">No studies selected.</string>
     <string name="next">Next</string>
     <string name="prev">Prev</string>
     <string name="page_one_of_one">Page 1 of 1</string>
