--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -548,4 +548,11 @@
 
     <string name="pref_profile_summary">Shows a dialog every 24 hours, verifying the person\'s name.</string>
     <string name="pref_profile_title">Verify person every 24 hours.</string>
+    <string name="trials">Trials</string>
+    <string name="studies">Studies</string>
+    <string name="fragment_brapi_import_search_name_hint">Search by name</string>
+    <string name="search">Search</string>
+    <string name="import_error_or_empty_response">The search resulted in an error or no results were found.</string>
+    <string name="import_title">Import</string>
+    <string name="programs">Programs</string>
 </resources>
