index starts at 1 now plot order is now always the same swapped text views for dialog title enabled dialog to close swapped observationUnitDbId for plot_id clear field name if it already exists added back buttons to each state added Dialog theme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -570,5 +570,6 @@
     <string name="dialog_field_creator_linear_button_content_desc">Button to choose linear plot pattern.</string>
     <string name="dialog_field_creator_zig_button_content_desc">Button to choose zig zag plot pattern.</string>
     <string name="dialog_field_creator_review_image_content_desc">Image showing orientation and plot pattern.</string>
+    <string name="dialog_back">Back</string>
 
 </resources>
