--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -550,4 +550,5 @@
 
     <string name="pref_profile_summary">Shows a dialog every 24 hours, verifying the person\'s name.</string>
     <string name="pref_profile_title">Verify person every 24 hours.</string>
+    <string name="data_helper_backup_v8_error">An error occurred when backing up v8 database.</string>
 </resources>
