--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="traits_format_angle">Angle</string>
     <string name="traits_format_video">Video</string>
     <string name="traits_format_location">Location</string>
+    <string name="traits_format_gnss">GNSS</string>
     <string name="traits_format_printer">Printer</string>
     <string name="traits_format_barcode">Barcode</string>
     <string name="traits_format_labelprint">Zebra Label Print</string>
@@ -550,4 +551,7 @@
 
     <string name="pref_profile_summary">Shows a dialog every 24 hours, verifying the person\'s name.</string>
     <string name="pref_profile_title">Verify person every 24 hours.</string>
+    <string name="gnss_no_paired_device">Please pair a device before collecting data.</string>
+    <string name="disconnect">Disconnect</string>
+    <string name="choose_paired_bluetooth_devices_title">Choose your paired bluetooth device.</string>
 </resources>
